--- a/challenge/src/main/resources/application.properties
+++ b/challenge/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#H2
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:alurachallenge-db
+spring.datasource.username=sa
+spring.datasource.password=
+
+#SQL
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
 
